# pure-backdrop

./: default.nix  pure-backdrop.cabal
src/Pure/: Backdrop.hs
