name:                pure-backdrop
version:             0.8.0.0
homepage:            purehs.org/doc/pure-backdrop
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-backdrop.git

library
  exposed-modules:
      Pure.Backdrop

  build-depends:
    base,
    pure-elm,
    pure-txt

  hs-source-dirs:      src
  default-language:    Haskell2010
